--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ body {
 
 
 .title-box {
-    background-color: rgba(64, 34, 9, 0.70);
+    background-color: rgba(100, 50, 3, 0.70);
     padding: 20px;
     margin-bottom: 25px;
     margin-top: 25px;
@@ -223,7 +223,7 @@ body {
 }
 
 .home-container {
-    background-color: #cc9356;
+    background-color: #114c65;
     padding-right: 15px;
     padding-left: 15px;
     padding-top: 10px;
@@ -247,6 +247,10 @@ body {
 
 .home-image {
     text-align: center;
+}
+
+.home-image-link img {
+    border-radius: 10px;
 }
     
  #page1 {
